url resolver, django bootstrap 적용

--- a/12.hphk_django_form.md
+++ b/12.hphk_django_form.md
@@ -256,7 +256,7 @@ def detail(request, article_pk):
 ## 3. Django ModelForm
 - 개념
 	- Django의 큰 특징 중 하나
-	- Model 클래스 정의와 비슷하게 Form 클래스르 선언할 수 있다
+	- Model 클래스 정의와 비슷하게 Form 클래스를 선언할 수 있다
 - 역할
 	- HTML 입력 폼 생성: as_p(), as_table()
 	- 유효성 검증: is_valid()
@@ -296,4 +296,179 @@ class ArticleForm(forms.ModelForm):
         fields = '__all__' #전체가져오기
         #fields = ('title','content',) #선택해서 데이터 가져오기
 
+```
+
+---
+# 2019.11.07 Django Form
+## URL Resolver
+- 사용자가 요청한 URL과 장고 내부로 들어오는 URL 사이에서 번역 역할을 해준다.
+- form.html 수정
+```django
+{% extends 'base.html' %}
+
+{% block body %}
+
+{% if request.resolver_match.url_name == 'create' %}
+  <h1>CREATE</h1>
+{% else %}
+  <h1>UPDATE</h1>
+{% endif %}  
+  <hr>
+<!--
+  action 값이 공백일 경우, 현재 위치하고 있는 주소로 요청을 보낸다. 폼을 던져주는 경로,
+  DB에 저장하는 경로가 동일하다면 공백으로 해도 정상적으로 동작한다.
+-->
+<form action="" method="POST">
+<!-- POST 요청할 때 반드시 설정 -->
+  {% csrf_token %} 
+  {{ form.as_p }}
+
+  <input type="submit">
+</form>
+<hr>
+{% if request.resolver_match.url_name == 'create' %}
+  <a href="{% url 'articles:index' %}">[BACK]</a>
+{% else %}
+  <a href="{% url 'articles:detail' article.pk %}">[BACK]</a>
+{% endif %}  
+
+{% endblock %}
+```
+- views.py 수정
+```python
+def update(request, article_pk):
+    article = get_object_or_404(Article,pk=article_pk)
+    
+    if request.method == "POST":
+        form = ArticleForm(request.POST, instance=article)
+        if form.is_valid():
+            article = form.save()           
+            return redirect('articles:detail', article.pk)
+    else:
+        form = ArticleForm(instance=article)       
+        
+    # context로 전달되는 2가지 form 형식
+    # 1. GET -> 초기값을 폼에 넣어서 사용자에게 던져줌
+    # 2. POST -> is_valid가 False가 리턴됬을 때, 오류 메세지를 포함해서 동작한다.
+    context = {
+        'form':form,
+        'article':article
+    }
+    return render(request, 'articles/form.html', context)
+```
+
+## django bootstrap 적용
+- bootstrap 설치 (https://django-bootstrap4.readthedocs.io/en/latest/)
+```bash
+$ pip install django-bootstrap4
+```
+- settings.py
+```python
+INSTALLED_APPS = [
+   	...
+    'bootstrap4',
+    ...
+]
+```
+- base.html 수정
+  - {% bootstrap_css %} 추가
+  - {% bootstrap_javascript jquery='full' %} 추가
+```django
+{% load bootstrap4 %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>04_django_form</title>
+{% bootstrap_css %}
+</head>
+<body>
+
+  <div class="container">
+    {% block body %}
+    {% endblock body %}
+  </div>
+
+{% bootstrap_javascript jquery='full' %}
+</body>
+</html>
+```
+- form.html 수정
+	- {% load bootstrap4 %} 추가
+	- {% bootstrap_form form layout='inline' %} 추가
+	- 버튼 수정
+	```
+	{% buttons submit='제출' reset="초기화" %}{% endbuttons %}
+	```
+```django
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+
+{% if request.resolver_match.url_name == 'create' %}
+  <h1>CREATE</h1>
+{% else %}
+  <h1>UPDATE</h1>
+{% endif %}  
+  <hr>
+<!--
+  action 값이 공백일 경우, 현재 위치하고 있는 주소로 요청을 보낸다. 폼을 던져주는 경로,
+  DB에 저장하는 경로가 동일하다면 공백으로 해도 정상적으로 동작한다.
+-->
+<form action="" method="POST">
+<!-- POST 요청할 때 반드시 설정 -->
+  {% csrf_token %} 
+  {% bootstrap_form form layout='inline' %}
+  <div class="text-center">
+  {% buttons submit='제출' reset="초기화" %}{% endbuttons %}
+  </div>
+</form>
+<hr>
+{% if request.resolver_match.url_name == 'create' %}
+  <a href="{% url 'articles:index' %}">[BACK]</a>
+{% else %}
+  <a href="{% url 'articles:detail' article.pk %}">[BACK]</a>
+{% endif %}  
+
+{% endblock %}
+```
+
+## VS Code mode 변경 세팅
+- beautify 설치
+![image-20191107095355677](md_img/image-20191107095355677.png)
+- ctrl + shift + p >  settings.py
+- alt + shift + f
+
+## Comment - ModelForm
+- Comment Model 생성
+
+  ```python
+  from django.db import models
+  
+  ...
+  
+  class Comment(models.Model):
+      article = models.ForeignKey(Article, on_delete=models.CASCADE)
+  
+      content = models.TextField()
+      created_at = models.DateTimeField(auto_now_add=True)
+      updated_at = models.DateTimeField(auto_now=True)
+  
+      #Model Level에서 메타데이터 옵션 설정
+      #-> 정렬기능 사용
+      class Meta:
+          ordering = ['-pk',] 
+  
+      #객체 표현 방식
+      def __str__(self):
+          return self.content
+  ```
+- db makemigrations, migrate 실행
+```bash
+$ python manage.py makemigrations
+$ python manage.py migrate
 ```
