comment modelform 추가

--- a/12.hphk_django_form.md
+++ b/12.hphk_django_form.md
@@ -1,4 +1,4 @@
-# 19.11.06(수) Django Form
+# 19.11.06 Django Form
 
 ## 0. Image Resizing
 
@@ -468,7 +468,67 @@ INSTALLED_APPS = [
           return self.content
   ```
 - db makemigrations, migrate 실행
-```bash
-$ python manage.py makemigrations
-$ python manage.py migrate
-```
+    ```bash
+    $ python manage.py makemigrations
+    $ python manage.py migrate
+    ```
+
+- forms.py 수정
+  ```python
+  class CommentForm(forms.ModelForm):
+      content = forms.CharField(
+          label='댓글',
+          max_length=1000,
+          widget=forms.Textarea(
+              attrs={
+                  'class':'content',
+                  'placeholder':'내용입력',
+                  'rows':5,
+                  'cols':30
+              }
+          )
+      )
+      class Meta:
+          model = Comment
+          fields = '__all__'
+  ```
+
+- admin.py 수정
+	```python
+	from django.contrib import admin
+    from .models import Article
+    from .models import Comment
+
+    ...
+
+    class CommentAdmin(admin.ModelAdmin):
+        list_display = ('pk','content', 'created_at', 'updated_at',)
+
+    admin.site.register(Article, ArticleAdmin)
+    admin.site.register(Comment, CommentAdmin)
+	```
+
+- views.py 수정
+
+  ```python
+  def detail(request, article_pk):
+      # article = Article.objects.get(pk=article_pk)
+      article = get_object_or_404(Article, pk=article_pk)
+      comment_form = CommentForm()
+      context = {
+          'article':article,
+          'comment_form':comment_form,
+          } 
+      return render(request, 'articles/detail.html', context)
+  ```
+
+- urls.py  수정
+
+  ```python
+  urlpatterns = [
+    ... path('<int:article_pk>/comments/',views.comments_create,name="comments_create"),    path('<int:article_pk>/comments/<int:comment_pk>/delete',views.comments_delete,name="comments_delete"),
+  ]
+  ```
+
+
+
