--- a/12.hphk_django_form.md
+++ b/12.hphk_django_form.md
@@ -303,7 +303,7 @@ class ArticleForm(forms.ModelForm):
 ## URL Resolver
 - 사용자가 요청한 URL과 장고 내부로 들어오는 URL 사이에서 번역 역할을 해준다.
 - form.html 수정
-```django
+```html
 {% extends 'base.html' %}
 
 {% block body %}
@@ -373,7 +373,7 @@ INSTALLED_APPS = [
 - base.html 수정
   - {% bootstrap_css %} 추가
   - {% bootstrap_javascript jquery='full' %} 추가
-```django
+```html
 {% load bootstrap4 %}
 
 <!DOCTYPE html>
@@ -403,7 +403,7 @@ INSTALLED_APPS = [
 	```
 	{% buttons submit='제출' reset="초기화" %}{% endbuttons %}
 	```
-```django
+```html
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 
@@ -508,7 +508,7 @@ INSTALLED_APPS = [
     admin.site.register(Comment, CommentAdmin)
 	```
 
-- views.py 수정
+- views.py 수정: detail 함수에서 comment_form 객체 추가
 
   ```python
   def detail(request, article_pk):
@@ -530,5 +530,253 @@ INSTALLED_APPS = [
   ]
   ```
 
+- views.py 수정 : comments_create 함수추가
 
+  ```python
+  def comments_create(requset, article_pk):
+      article = get_object_or_404(Article, pk =article_pk)
+      if requset.method == 'POST':
+          comment_form = CommentForm(requset.POST)
+          if comment_form.is_valid():
+              #save 메서드 -> 선택 인자:(기본값) commit=True
+              #DB에 바로 저장되는 것을 막아준다
+              comment  = comment_form.save(commit=False)
+              comment.article = article
+              comment.save()
+              
+              return redirect('articles:detail',article.pk)
+      return redirect('articles:detail',article.pk)
+  
+  def comments_delete(requset, article_pk,comment_pk):
+      if requset.method == 'POST':
+          comment = Comment.objects.get(pk=comment_pk)
+          comment.delete()
+          return redirect('articles:detail',article_pk)
+      else:
+          return redirect('articles:detail',article_pk)
+  
+  ```
+
+- Detail 화면에 댓글 추가
+  
+  - detail.html
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+{% block body %}
+...
+<hr>
+<p><b>댓글목록({{comments|length}}개)</b></p>
+{% for comment in comments %}
+<p>[{{forloop.revcounter}}번 댓글] {{comment.content}} <small>({{comment.created_at}})</small>
+<form action="{% url 'articles:comments_delete' article.pk comment.pk %}" method="POST">
+{% csrf_token %}<button type="submit" >댓글삭제</button></form>
+</p>
+{% endfor %}
+{% endblock %}
+```
+
+- views.py
+
+```python
+def detail(request, article_pk):
+    # article = Article.objects.get(pk=article_pk)
+    article = get_object_or_404(Article, pk=article_pk)
+    comment_form = CommentForm()
+    comments = article.comment_set.all()
+
+    context = {
+        'article':article,
+        'comment_form':comment_form,
+        'comments':comments
+        } 
+    return render(request, 'articles/detail.html', context)
+```
+
+## View Decorators
+
+> Django가 제공하는 Decorator 활용하기
+
+#### require_POST
+
+- view함수가 POST메서드 요청만 승인하도록 하는 데코레이터
+- 일치하지 않으면 `405 method Not Allowed` 에러를 발생시킨다
+
+##### 실습
+
+- views.py 수정
+
+  - require_POST import
+
+  - @require_POST
+
+```python
+from django.views.decorators.http import require_POST
+
+@require_POST
+def delete(request, article_pk):
+    article = get_object_or_404(Article,pk=article_pk)
+        
+    article.delete()
+    return redirect('articles:index')
+```
+
+# Authentication(인증)
+
+> 장고에서 이미 Auth 관련 기능을 제공함
+>
+>  `createsuperuser`를 통해 관리자 계정도 만들었고 어드민 페이지에서 로그인 기능 사용 가능
+
+## Accounts 앱생성
+
+- 기존 앱에서 구현해도 되지만 장고에서는 기능 단위로 애플리케이션을 나누는 것이 일반적이므로 accounts라는 새로운 앱을 생성
+
+- accounts 앱 생성
+
+  ```bash
+  #05_django/04_django_form (master)
+  $ python manage.py startapp accounts
+  ```
+
+  
+
+- URL 분리
+
+  ```python
+  # 프로젝트내 config > urls.py
+  from django.contrib import admin
+  from django.urls import path, include
+  
+  urlpatterns = [
+      path('accounts/',include('accounts.urls')),
+      ...
+  ]
+  ```
+
+  ```python
+  # accounts > urls.py
+  from django.urls import path
+  
+  urlpatterns = [
+    
+  ]
+  ```
+
+  
+
+## SignUp 기능
+
+- views.py
+
+  ```python
+  from django.shortcuts import render,redirect
+  from django.contrib.auth.forms import UserCreationForm, AuthenticationForm
+  
+  # Create your views here.
+  #Authentication(인증) -> 신원 확인
+  def signup(request):
+      if request.user.is_authenticated:
+          return redirect('articles:index')
+  
+      if request.method=='POST':
+          form = UserCreationForm(request.POST)
+          if form.is_valid():
+              user = form.save()
+              auth_login(request, user)
+              return redirect('articles:index')
+      else:
+          form = UserCreationForm
+      context ={'form':form}
+      return render(request,'accounts/signup.html',context)
+  ```
+
+## Login 기능
+
+- views.py
+
+  ```python
+  from django.shortcuts import render,redirect
+  from django.contrib.auth import login as auth_login
+  from django.contrib.auth.forms import UserCreationForm, AuthenticationForm
+  
+  ...
+  
+  def login(request):
+      if request.user.is_authenticated:
+          return redirect('articles:index')
+  
+      if request.method =='POST':
+          form = AuthenticationForm(request,request.POST)
+          if form.is_valid():
+              auth_login(request, form.get_user())
+              return redirect('articles:index')
+      else:
+          form = AuthenticationForm()
+      context = {'form':form}
+      return render(request,'accounts/login.html',context)
+  
+  ```
+
+- base.html 수정
+
+  ```html
+  {% load bootstrap4 %}
+  
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>04_django_form</title>
+  {% bootstrap_css %}
+  </head>
+  <body>
+  
+    <div class="container">
+      {% if user.is_authenticated %}
+        <h2>어서오세요, {{user.username}}</h2><a href="{% url 'accounts:logout' %}">로그아웃</a>
+      {% else %}
+        <a href="{% url 'accounts:login' %}">로그인</a>
+        <a href="{% url 'accounts:signup' %}">회원가입</a>
+      {% endif %}
+      
+      {% block body %}
+      {% endblock body %}
+    </div>
+  
+  {% bootstrap_javascript jquery='full' %}
+  </body>
+  </html>
+  ```
+
+  
+
+## Logout  기능
+
+```python
+#accounts > views.py
+from django.contrib.auth import logout as auth_logout
+...
+
+def logout(request):
+    auth_logout(request)
+    return redirect('articles:index')
+```
+
+```python
+#accounts > urls.py
+
+from django.urls import path
+from . import views
+
+app_name = 'accounts'
+
+urlpatterns = [
+    path('signup/',views.signup,name="signup"),
+    path('login/',views.login,name="login"),
+    path('logout/',views.logout,name="logout"),
+]
+```
 
