--- a/12.hphk_django_form.md
+++ b/12.hphk_django_form.md
@@ -780,3 +780,242 @@ urlpatterns = [
 ]
 ```
 
+## 사용자 정보 수정  커스텀마이징
+- https://github.com/django/django/blob/master/django/contrib/auth/models.py 참고
+- accounts > views.py 수정
+```python
+from .forms import CustomUserChangeForm
+from django.contrib.auth.decorators import login_required
+...
+
+#회원정보 수정
+@login_required #로그인 회원만 접근가능
+def update(request):
+    if request.method =='POST':
+        form = CustomUserChangeForm(request.POST, instance=request.user)
+        if form.is_valid():
+            form.save()
+            return redirect('articles:index')
+    else:
+        form = CustomUserChangeForm(instance=request.user)
+
+    context = {'form':form}
+    return render(request,'accounts/update.html',context)
+    
+```
+- config > templates >  accounts > update.html
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+<h1></h1>
+<hr>
+<form action="" method="POST">
+{% csrf_token %}
+{% bootstrap_form form %}
+{% buttons submit='수정' reset='초기화' %}{% endbuttons %}
+</form>
+{% endblock body %}
+```
+- accounts > urls.py
+```python
+from django.urls import path
+from . import views
+
+app_name = 'accounts'
+urlpatterns = [
+    ...
+    path('update/',views.update,name="update"),
+]
+```
+
+## 비밀번호 변경 기능 추가
+```python
+from django.contrib.auth.forms import PasswordChangeForm
+
+#비밀번호 변경
+def change_password(request):
+    if request.method == 'POST':
+        form = PasswordChangeForm(request.user, request.POST)
+        if form.is_valid():
+            form.save()
+            return redirect('articles:index')
+    else:
+        form = PasswordChangeForm(request.user)
+    context = {'form':form}
+    return render(request,'accounts/change_password.html',context)
+```
+
+- change_password.html
+
+```python
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+<h1>암호변경</h1>
+<hr>
+<form action="" method="POST">
+{% csrf_token %}
+{% bootstrap_form form %}
+{% buttons submit='변경하기' reset='초기화' %}{% endbuttons %}
+</form>
+{% endblock body %}
+```
+
+- urls.py 수정
+
+```python
+urlpatterns = [
+  ...    path('password/',views.change_password,name="change_password"),
+]
+```
+
+- 문제점
+  - 비밀번호 변경은 잘되는데 변경이 끝나면 로그인이 풀림
+  - 비밀번호가 변경되면서 기존 세션과 회원인증 정보가 일치하지 않게 되기 때문에 자동으로 로그아웃 되어 버림
+  - `update_session_auth_hash`로 해결하기 (세션유지)
+
+```python
+from django.contrib.auth import update_session_auth_hash
+...
+#비밀번호 변경
+@login_required
+def change_password(request):
+    if request.method == 'POST':
+        form = PasswordChangeForm(request.user, request.POST)
+        if form.is_valid():
+            user = form.save()
+            update_session_auth_hash(request, user)
+            return redirect('articles:index')
+    else:
+        form = PasswordChangeForm(request.user)
+    context = {'form':form}
+    return render(request,'accounts/change_password.html',context)
+```
+
+## Auth form 합치기
+
+- auth_form.html 추가
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+{% if request.resolver_match.url_name == 'signup' %}
+<h1>회원가입</h1>
+{% elif request.resolver_match.url_name == 'login' %}
+<h1>로그인</h1>
+{% elif request.resolver_match.url_name == 'update' %}
+<h1>회원정보변경</h1>
+{% else %}
+<h1>비밀번호변경</h1>
+{% endif %}
+<hr>
+<form action="" method="POST">
+{% csrf_token %}
+{% bootstrap_form form %}
+{% buttons submit='확인' reset="초기화" %}{% endbuttons %}
+</form>
+{% endblock body %}
+```
+
+- views.py 수정
+
+  - signup(), login(), update(), change_password() 함수의 return 부분 수정
+
+    ```python
+    ...
+    return render(request,'accounts/auth_form.html',context)
+    ```
+
+    
+
+## Gravatar - 프로필 이미지 만들기
+
+-  https://ko.gravatar.com/ 
+- 이메일을 활용해서 프로필 사진을 만들어주는 서비스
+- 한번등록하면 이를 지원하는 사이트에서는 모두 해당 프로필 이미지를 사용할 수 있다
+- 이메일 체크
+  -  https://ko.gravatar.com/site/check
+  - 이메일 주소를 해시(MD5)로 바꾸고 URL으로 접속하면 이미지가 뜬다(?s=80 으로 사이즈 조절 가능)
+
+- Python으로 Hash 만들기
+
+  - md5 hash 생성
+    
+  - import hashlib
+    
+  - 혹시 모를 공백, 대문자 등을 방지하기 위한 파이썬 문법들
+    
+  - strip(), lower()
+    
+  - python shell 실행
+
+    ```python
+    import hashlib
+    img_url = hashlib.md5('kyungh103@gmail.com'.encode('utf-8').lower().strip()).hexdigest()
+    ```
+
+- Custom Template tag and filters
+	
+	- 어플리케이션 내에 templatetags 폴더 생성
+
+    ![image-20191111151633315](md_img/image-20191111151633315.png)
+
+	- templatetags 폴더내에 gravatar.py 파일생성
+	
+	 ```python
+	 import hashlib
+	 from django import template
+	 
+	 #기존 템플릿 라이브러리에 새로운 템플릿 추가
+	 register = template.Library()
+	 
+	 #아래 함수를 필터로 등록
+	 @register.filter
+	 def makemd5(email):
+	     return hashlib.md5(email.encode('utf-8').lower().strip()).hexdigest()
+	 ```
+
+	- base.html 수정
+
+     ```html
+     {% load bootstrap4 %}
+     {% load gravatar %}
+     <!DOCTYPE html>
+     <html lang="en">
+     <head>
+       <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+       <title>04_django_form</title>
+     {% bootstrap_css %}
+     </head>
+     <body>
+     
+       <div class="container">
+         {% if user.is_authenticated %}
+           <h2><img class="rounded-circle" src="https://s.gravatar.com/avatar/{{ user.email|makemd5 }}?s=80" alt="">어서오세요, {{user.username}}</h2>
+           <a class="btn btn-outline-primary btn-sm" href="{% url 'accounts:logout' %}">로그아웃</a>
+           <a class="btn btn-outline-primary btn-sm" href={% url 'accounts:update'%}>정보수정</a>
+           <a class="btn btn-outline-primary btn-sm" href={% url 'accounts:change_password'%}>암호변경</a>
+         {% else %}
+           <a class="btn btn-outline-primary btn-sm" href="{% url 'accounts:login' %}">로그인</a>
+           <a class="btn btn-outline-primary btn-sm" href="{% url 'accounts:signup' %}">회원가입</a>
+         {% endif %}
+         
+         {% block body %}
+         {% endblock body %}
+       </div>
+     
+     {% bootstrap_javascript jquery='full' %}
+     </body>
+     </html>
+     ```
+
+     ![image-20191111161733548](md_img/image-20191111161733548.png)
+
