--- a/12.hphk_django_form.md
+++ b/12.hphk_django_form.md
@@ -33,6 +33,7 @@
 * 모델 수정
 
   ```python
+  # models.py
   class Article(models.Model):
       ...
       # image = models.ImageField(blank=True)
@@ -1019,3 +1020,4 @@ def change_password(request):
 
      ![image-20191111161733548](md_img/image-20191111161733548.png)
 
+#### 
