article 삭제시 조건체크 추가

--- a/12.hphk_django_form.md
+++ b/12.hphk_django_form.md
@@ -1,4 +1,4 @@
-# 19.11.06 Django Form
+# Django Form
 
 ## 0. Image Resizing
 
@@ -300,7 +300,6 @@ class ArticleForm(forms.ModelForm):
 ```
 
 ---
-# 2019.11.07 Django Form
 ## URL Resolver
 - 사용자가 요청한 URL과 장고 내부로 들어오는 URL 사이에서 번역 역할을 해준다.
 - form.html 수정
@@ -604,7 +603,7 @@ def detail(request, article_pk):
 - view함수가 POST메서드 요청만 승인하도록 하는 데코레이터
 - 일치하지 않으면 `405 method Not Allowed` 에러를 발생시킨다
 
-##### 실습
+#### 실습
 
 - views.py 수정
 
