--- a/12.hphk_django_form2.md
+++ b/12.hphk_django_form2.md
@@ -32,7 +32,7 @@
 
 #### User - Article
 
-- articels > models.py
+- articels > models.py :모델수정
 
   ```python
   from django.conf import settings
@@ -60,6 +60,63 @@
   $ python manage.py migrate
   ```
 
-  
+  - views.py : create() 함수 수정
+
+    ```python
+    def create(request):    
+        if request.method == 'POST':
+            # Binding 과정
+            # 폼 인스턴스를 생성하고, 전달받은 데이터를 채운다.
+            # 인스턴스에 데이터를 채워서, 유효성 검증을 진행한다. (그래서 변수에 담음)
+            form = ArticleForm(request.POST)
+            # embed()
+            if form.is_valid():
+                article = form.save(commit=False)
+                article.user = request.user
+                article.save()
+
+            return redirect('articles:detail', article.pk)
+        else:
+            form = ArticleForm()
+
+        # form으로 전달받는 형태가 2가지
+        # 1. GET 요청 -> 비어있는 폼 전달
+        # 2. 유효성 검증 실패 -> 에러 메세지를 포함한 채로 폼 전달
+        context = {'form':form}
+        return render(request,'articles/form.html', context)
+    ```
+
+#### Article 삭제시 조건체크 추가
+
+- views.py
+
+```python
+@require_POST
+def delete(request, article_pk):    
+    if request.user.is_authenticated:#사용자가 로그인 되어 있는지
+        article = get_object_or_404(Article,pk=article_pk) #삭제할 게시글
+        if request.user == article.user: #로그인한 사용자와 게시글 작성자가 같은지
+            article.delete()
+        else:
+            return redirect('articles:detail',article.pk)
+
+    return redirect('articles:index')
+    
+```
+
+- detail.html 수정
+  - {% if request.user == article.user %} 추가
+
+```html
+...
+{% if request.user == article.user %}
+<a href="{% url 'articles:update' article.pk %}">[UPDATE]<a>
+<form action="{% url 'articles:delete' article.pk %}" method="POST">
+{% csrf_token %}<button type="submit" >[DELETE]</button>
+</form>
+{% endif %}
+```
+
+
 
 #### User - Comment
