--- a/12.hphk_django_form2.md
+++ b/12.hphk_django_form2.md
@@ -86,7 +86,7 @@
         return render(request,'articles/form.html', context)
     ```
 
-#### Article 삭제시 조건체크 추가
+#### Article 수정, 삭제시 조건체크 추가
 
 - views.py
 
@@ -116,7 +116,5 @@ def delete(request, article_pk):
 </form>
 {% endif %}
 ```
-
-
 
 #### User - Comment
