댓글 작성,삭제시 조건 체크 추가

--- a/12.hphk_django_form2.md
+++ b/12.hphk_django_form2.md
@@ -118,3 +118,49 @@ def delete(request, article_pk):
 ```
 
 #### User - Comment
+
+- models.py 수정
+
+  ```python
+  class Comment(models.Model):
+      article = models.ForeignKey(Article, on_delete=models.CASCADE)
+      content = models.TextField()
+      created_at = models.DateTimeField(auto_now_add=True)
+      updated_at = models.DateTimeField(auto_now=True)
+      user = models.ForeignKey(settings.AUTH_USER_MODEL,on_delete=models.CASCADE)
+  
+      #Model Level에서 메타데이터 옵션 설정
+      #-> 정렬기능 사용
+      class Meta:
+          ordering = ['-pk',] 
+  
+      #객체 표현 방식
+      def __str__(self):
+          return self.content
+  ```
+
+  ```bash
+#/05_django/04_django_form (master)
+$ source ~/venv/Scripts/activate
+$ python manage.py makemigrations
+$ python manage.py migrate
+  ```
+
+- views.py : comments_create() 수정
+
+  ```python
+  @require_POST
+  def comments_create(requset, article_pk):
+      #article = get_object_or_404(Article, pk =article_pk)    
+      comment_form = CommentForm(requset.POST)
+      if comment_form.is_valid():
+          comment  = comment_form.save(commit=False)
+          comment.user = requset.user
+          #comment.article = article    #방법1    
+          comment.article_id = article_pk #방법2
+          comment.save()
+  
+          return redirect('articles:detail',article_pk)
+  ```
+
+  
