Comment 작성, 삭제시 조건 체크

--- a/12.hphk_django_form2.md
+++ b/12.hphk_django_form2.md
@@ -146,6 +146,7 @@ $ python manage.py makemigrations
 $ python manage.py migrate
   ```
 
+#### Comment 작성, 삭제시 조건 체크
 - views.py : comments_create() 수정
 
   ```python
@@ -161,6 +162,64 @@ $ python manage.py migrate
           comment.save()
   
           return redirect('articles:detail',article_pk)
+  
+  @require_POST
+  def comments_delete(requset, article_pk,comment_pk):
+      if requset.user.is_authenticated: #로그인여부확인
+          comment = get_object_or_404(Comment,pk=comment_pk)
+          if requset.user == comment.user: #로그인한 사용자와 댓글 작성자가 같을 경우
+              comment.delete()
+      return redirect('articles:detail',article_pk)
+  ```
+
+- detail.html 수정
+
+  ```html
+  {% extends 'base.html' %}
+  {% load bootstrap4 %}
+  {% block body %}
+    <br>
+    <h1>DETAIL</h1>
+    <hr>
+  
+  <p>글 번호 : {{ article.pk }}</p>
+  <p>글 제목 : {{ article.title }}</p>
+  <p>글 내용 : {{ article.content }}</p>
+  <p>생성 시각 : {{ article.created_at }}</p>
+  <p>수정 시각 : {{ article.updated_at }}</p>
+  <hr>
+  <a href="{% url 'articles:index' %}">[BACK]</a>
+  {% if request.user == article.user %}
+  <a href="{% url 'articles:update' article.pk %}">[UPDATE]<a>
+  <form action="{% url 'articles:delete' article.pk %}" method="POST">
+  {% csrf_token %}<button type="submit" >[DELETE]</button>
+  </form>
+  {% endif %}
+  <hr>
+  <br>
+  {% if user.is_authenticated %}
+  <form action="{% url 'articles:comments_create' article.pk %}" method="POST">
+    <!-- POST 요청할 때 반드시 설정 -->
+    {% csrf_token %}
+    {% bootstrap_form comment_form layout='inline' %}
+    <div class="text-center">
+      {% buttons submit='댓글작성' %}{% endbuttons %}
+    </div>
+  </form>
+  {% else%}
+  <a href="{% url 'accounts:login' %}">[댓글을 작성하려면 로그인 해주세요]</a>
+  {% endif %}
+  <hr>
+  <p><b>댓글목록({{comments|length}}개)</b></p>
+  {% for comment in comments %}
+  <p>[{{forloop.revcounter}}번 댓글] {{comment.content}} <small>({{comment.created_at}})</small>
+  {% if comment.user == request.user %}
+  <form action="{% url 'articles:comments_delete' article.pk comment.pk %}" method="POST">
+  {% csrf_token %}<button type="submit" >댓글삭제</button></form>
+  {% endif %}
+  </p>
+  {% endfor %}
+  {% endblock %}
   ```
 
   
