--- a/12.hphk_django_form2.md
+++ b/12.hphk_django_form2.md
@@ -223,3 +223,225 @@ $ python manage.py migrate
   ```
 
   
+
+## Model Relationships
+
+- 현재 User와 Article의 관계는 User :  Article = 1: N 이다
+- [참조] article.user
+- [역참조] user.article_set
+- 관점을 조금 바꿔서, User : Article = M : N으로 설정하고 다시 생각해보자. 유저와 게시글 관계에서 서로 좋아요를 표현할 수 있다고 생각해보자
+  - User는 여러 개의 게시글에 Like를 할수 있고
+  - Article은 여러 명의 User로 부터 Like를 받을 수 있다
+
+#### Many to One
+
+```bash
+#05_django (master)
+$ cd 05_model_relation/
+
+#05_django/05_model_relation (master)
+$ django-admin startproject config .
+$ python manage.py startapp manytoone
+```
+
+- manytoone > models.py :class 추가
+
+  ```python
+  from django.db import models
+  
+  # Create your models here.
+  class User(models.Model):
+      name = models.TextField()
+  
+      def __str__(self):
+          return f'{self.name}'
+  
+  class Article(models.Model):
+      title = models.TextField()
+      user = models.ForeignKey(User, on_delete=models.CASCADE)
+  
+      def __str__(self):
+          return f'{self.title}'
+          
+  class Comment(models.Model):
+      content = models.TextField()
+      article = models.ForeignKey(Article, on_delete=models.CASCADE)
+      user = models.ForeignKey(User, on_delete=models.CASCADE)
+  
+      def __str__(self):
+          return f'{self.content}'
+          
+  ```
+
+  ```bash
+  #05_django/05_model_relation (master)
+  $ python manage.py makemigrations
+  $ python manage.py migrate
+  ```
+
+  ```bash
+  #05_django/05_model_relation (master)
+  $ python manage.py shell_plus
+  
+  user1 = User.objects.create(name='Kim')
+  user2 = User.objects.create(name='Lee')
+  article1 = Article.objects.create(title='1글', user=user1)
+  article2 = Article.objects.create(title='2글', user=user1)
+  article3 = Article.objects.create(title='3글', user=user2)
+  c1 = Comment.objects.create(content='1글1댓글', user=user1, article=article1)
+  c2 = Comment.objects.create(content='1글2댓글', user=user2, article=article1)
+  c3 = Comment.objects.create(content='1글3댓글', user=user1, article=article1)
+  c4 = Comment.objects.create(content='1글4댓글', user=user2, article=article1)
+  c5 = Comment.objects.create(content='2글1댓글', user=user1, article=article2)
+  c6 = Comment.objects.create(content='!1글5댓글', user=user2, article=article1)
+  c7 = Comment.objects.create(content='!2글2댓글', user=user2, article=article2)
+  ```
+
+```python
+
+In [  ]: for article in user1.article_set.all():
+    ...:     for comment in article.comment_set.all():
+    ...:         print(comment.content)
+1글1댓글
+1글2댓글
+1글3댓글
+1글4댓글
+!1글5댓글
+2글1댓글
+!2글2댓글
+
+In []: c2.user.pk
+Out[]: 2
+#4. 2번 댓글을 작성한 User의 이름은?
+In []: c2.user.name
+Out[]: <User: Lee>
+#5. 2번 댓글을 작성한 사람의 모든 게시글은?
+In []: c2.user.article_set.all()
+Out[]: <QuerySet [<Article: 3글>]>
+#6. 1번 글의 첫번째 댓글을 작설한 사람의 이름은?
+In []: article1.comment_set.first().user.name
+Out[]: 'Kim'
+#7. 1번 글의 2번째부터 4번째 까지 댓글 가져오기
+In []: article1.comment_set.all()[1:4]
+Out[]: <QuerySet [<Comment: 1글2댓글>, <Comment: 1글3댓글>, <Comment: 1글4댓글>]>
+
+In []: print(article1.comment_set.all()[1:4].query)
+SELECT "manytoone_comment"."id", "manytoone_comment"."content", "manytoone_comment"."article_id", "manytoone_comment"."user_id" FROM "manytoone_comment" WHERE "manytoone_comment"."article_id" = 1  LIMIT 3 OFFSET 1
+#8. 1번 글의 첫번째, 두번째 댓글 가져오기
+In []: article1.comment_set.all()[0:2]
+Out[]: <QuerySet [<Comment: 1글1댓글>, <Comment: 1글2댓글>]>
+#9.1번글의 두번째 댓글을 작성한 사람의 첫번째 게시물의 작성자의 이름은?
+In []: article1.comment_set.all()[1].user.article_set.all()[0]
+    ...: .user.name
+Out[]: 'Lee'
+#10.1번 댓글의 user정보만 가져오면?
+In []: Comment.objects.values('user').get(pk=1)
+Out[]: {'user': 1}
+#11.2번 사람이 작성한 댓글을 PK 내림차순으로 가져오면?
+In []: user2.comment_set.order_by('-pk')
+Out[]: <QuerySet [<Comment: !2글2댓글>, <Comment: !1
+글5댓글>, <Comment: 1글4댓글>, <Comment: 1글2댓글>]>
+#12. 제목이 '1글'이라는 게시글을 전부 가져오면?
+In []: Article.objects.filter(title='1글')
+Out[]: <QuerySet [<Article: 1글>]>
+
+```
+
+
+
+#### Many to Many
+
+```bash
+#05_django/05_model_relation (master)
+$ python manage.py startapp manytomany
+```
+
+```python
+from django.db import models
+
+# Create your models here.
+class Doctor(models.Model):
+    name = models.TextField()
+
+    def __str__(self):
+        return f'{self.pk}번 의사 {self.name}'
+
+class Patient(models.Model):
+    name = models.TextField()
+    #doctor = models.ForeignKey(Doctor,on_delete=models.CASCADE)
+    doctors = models.ManyToManyField(Doctor, through='Reservation')
+
+    def __str__(self):
+        return f'{self.pk}번 환자 {self.name}'
+
+class Reservation(models.Model):
+    doctor = models.ForeignKey(Doctor,on_delete=models.CASCADE)
+    patient = models.ForeignKey(Patient, on_delete=models.CASCADE)
+    def __str__(self):
+        return f'{self.doctor.id}의사의 {self.patient.id}번 환자'
+    
+```
+
+```bash
+$ python manage.py shell_plus
+```
+
+```python
+In []: doctor1 = Doctor.objects.create(name='도현')
+In []: doctor2 = Doctor.objects.create(name='은애')
+
+In []: patient1 = Patient.objects.create(name='민승')
+In []: patient2 = Patient.objects.create(name='세환')
+
+In []: Reservation.objects.create(doctor=doctor1, patient=patient2)
+Out[]: <Reservation: Reservation object (1)>
+
+In []: Reservation.objects.create(doctor=doctor2, patient=patient2)
+Out[]: <Reservation: Reservation object (2)>
+
+In []: Reservation.objects.get(pk=1)
+Out[]: <Reservation: 1의사의 4번 환자>
+        
+In []: patient1 = Patient.objects.get(pk=1)
+In []: patient1.doctors.all()
+Out[]: <QuerySet []>
+    
+```
+
+- models.py 수정
+  - doctors = models.ManyToManyField(Doctor, through='Reservation', related_name="patients")
+
+```python
+from django.db import models
+
+# Create your models here.
+class Doctor(models.Model):
+    name = models.TextField()
+
+    def __str__(self):
+        return f'{self.pk}번 의사 {self.name}'
+
+class Patient(models.Model):
+    name = models.TextField()
+    #doctor = models.ForeignKey(Doctor,on_delete=models.CASCADE)
+    #doctors = models.ManyToManyField(Doctor, through='Reservation')
+    #참조로 조회할 수 있게 설정 through=...
+    #역참조로 조회할 수 있게 설정 related_name=...
+    doctors = models.ManyToManyField(Doctor, through='Reservation', related_name="patients")
+
+    def __str__(self):
+        return f'{self.pk}번 환자 {self.name}'
+
+class Reservation(models.Model):
+    doctor = models.ForeignKey(Doctor,on_delete=models.CASCADE)
+    patient = models.ForeignKey(Patient, on_delete=models.CASCADE)
+    def __str__(self):
+        return f'{self.doctor.id}의사의 {self.patient.id}번 환자'
+    
+    
+```
+
+![image-20191112162510045](../telegram_bot/md_img/image-20191112162510045.png)
+
+
+
