model relationship - many to many option

--- a/12.hphk_django_form2.md
+++ b/12.hphk_django_form2.md
@@ -351,6 +351,46 @@ Out[]: <QuerySet [<Article: 1글>]>
 
 #### Many to Many
 
+- 중개 모델 생성
+  - 1:N으로만 구현하려니 예약정보 시스템을 표현하기 어렵다
+  - 중개 모델(class Reservation)을 만들어서 Doctor와 Patient를 이어주는 예약정보를 담아보자
+
+- through 옵션
+
+  - Patient입장에서 중개 모델을 거쳐서 reservation_set 형태로 예약정보를 가져오는 것은 불편하다
+    - 마찬가지로 Doctor도 reservation_set 형태로 예약정보를 먼저 불러온 뒤에 Patient정보를 가져올수 있다
+
+  - Doctor정보를 중개 모델을 거치지 않고 다이렉트로 가져와 보자
+
+  ```python
+  class Doctor(models.Model):
+      name = models.TextField()
+      
+  class Patient(models.Model):
+      name = models.TextField()   
+      doctors = models.ManyToManyField(Doctor, through='Reservation')
+  ```
+
+  
+
+-  related_name 옵션
+
+  - 이제 Patient 입장에서는 patient.doctors.all()과 같은 형태로 쉽게 Doctor정보를 가져올 수 있다
+  - 마찬가지로 Doctor에서도 doctor.patients.all()과 같은 형태로 Patient정보를 가져올 수 있게, related_name 옵션을 사용해보자
+
+  ```python
+  class Doctor(models.Model):
+      name = models.TextField()
+  
+  class Patient(models.Model):
+      name = models.TextField()
+      doctors = models.ManyToManyField(Doctor, through='Reservation', related_name="patients")
+  ```
+
+  
+
+##### 실습
+
 ```bash
 #05_django/05_model_relation (master)
 $ python manage.py startapp manytomany
@@ -442,6 +482,54 @@ class Reservation(models.Model):
 ```
 
 ![image-20191112162510045](../telegram_bot/md_img/image-20191112162510045.png)
+
+- 단순히 테이블간 N:M 관계 설정만 필요한 경우 django
+
+  모델에 ManyToManyField() 설정만으로 자동으로 관계 테이블 생성됨
+
+  - 어플리케이션 내에 db.sqlite3, migrations내에 0001...파일 삭제
+
+	- models.py 내에 Reservation class 삭제
+	
+	- models.py 아래와 같이 수정
+	
+	  ```python
+	  class Patient(models.Model):
+	      name = models.TextField()
+	      doctors = models.ManyToManyField(Doctor, related_name="patients")
+	  
+	      def __str__(self):
+	          return f'{self.pk}번 환자 {self.name}'
+	  ```
+	
+	  
+	
+	- makemigrations, migrate 실행하면 아래와 같이 자동으로관계테이블 생성됨
+	
+	![image-20191112163904654](../telegram_bot/md_img/image-20191112163904654.png)
+	
+	![image-20191112170103561](../telegram_bot/md_img/image-20191112170103561.png)
+
+```bash
+$ python manage.py shell_plus
+```
+
+```python
+In []: doctor1.patients.add(patient1)
+
+In []: doctor1.patients.all()
+Out[]: <QuerySet [<Patient: 1번 환자 민승>]>
+
+In []: doctor1.patients.add(patient2)
+
+In []: doctor1.patients.all()
+Out[]: <QuerySet [<Patient: 1번 환자 민승>, <Patient: 2번 환자 세환>]>
+
+In []: doctor1.patients.remove(patient1)
+
+In []: doctor1.patients.all()
+Out[]: <QuerySet [<Patient: 2번 환자 세환>]>
+```
 
 
 
