이미지 경로 수정

--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -255,7 +255,7 @@ class Reservation(models.Model):
     
 ```
 
-![image-20191112162510045](../telegram_bot/md_img/image-20191112162510045.png)
+![image-20191112162510045](./md_img/image-20191112162510045.png)
 
 - 단순히 테이블간 N:M 관계 설정만 필요한 경우 django
 
@@ -280,9 +280,9 @@ class Reservation(models.Model):
 	
 	- makemigrations, migrate 실행하면 아래와 같이 자동으로관계테이블 생성됨
 	
-	![image-20191112163904654](../telegram_bot/md_img/image-20191112163904654.png)
+	![image-20191112163904654](./md_img/image-20191112163904654.png)
 	
-	![image-20191112170103561](../telegram_bot/md_img/image-20191112170103561.png)
+	![image-20191112170103561](./md_img/image-20191112170103561.png)
 
 ```bash
 $ python manage.py shell_plus
