article에 좋아요 기능추가, 템플릿분리 적용

--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -305,5 +305,156 @@ In []: doctor1.patients.all()
 Out[]: <QuerySet [<Patient: 2번 환자 세환>]>
 ```
 
+---
 
+## Like / Profile /  Follow
 
+#### Like
+
+> User는 여러개의 Article에 좋아요 표시할 수 있고, `Article`은 여러명의 User에게 좋아요를 받을 수 있다
+
+##### Model 설정
+
+  - blank = True
+
+    - 최초 작성되는 글에는 좋아요 없고, 글이 작성되더라도 좋아요를 받지 못할 수 있다
+    - 이 옵션을 줘서 유효성 검사를 통과한다
+    - 실제 데이터베이스는 null이 들어가는게 아니라 빈 스트링('')형태가 들어간다
+
+    ```python
+    #articles/models.py
+    class Article(models.Model):
+        title = models.CharField(max_length=40)
+        content = models.TextField()
+        created_at = models.DateTimeField(auto_now_add=True)
+        updated_at = models.DateTimeField(auto_now=True)
+        user = models.ForeignKey(settings.AUTH_USER_MODEL,on_delete=models.CASCADE)
+        like_users = models.ManyToManyField(settings.AUTH_USER_MODEL, related_name='like_articles', blank=True)
+        
+        # 객체 표시 형식 
+        def __str__(self):
+             return f'[{self.pk}번글]: {self.title}|{self.content}'
+    
+    ```
+	- related_name 설정은 필수
+		- `like_users` 필드에 related_name을 쓰지 않으면,User입장에서 article_set을 사용할 경우 user필드를 갖고올지 like_users필드를 갖고 올지 인식하지 못한다
+		- related_name 설정과 함께 해당 필드는 article_set과 같은 방식으로 호출하지 못하고, like_users방식으로 호출해야 한다
+	- 사용할 수 있는 기능
+		- user.article_set.all() : 유저가 작성한 게시글 전부
+		- user.like_articles.all() : 유저가 좋아요 누른 게시글 전부
+		- article.user :게시글 작성한 유저, 1:N
+		- article.like_users : 게시글 좋아요 누른 유저 전부 , M:N
+	
+    ```bash
+    #05_django/04_django_form (master)
+    $ python manage.py makemigrations
+    $ python manage.py migrate
+    ```
+
+    ![image-20191113092940330](md_img/image-20191113092940330.png)
+
+##### View & URL
+
+- exists() & filter()
+  - filter() : 특정한 조건에  맞는 레코드들을 가져온다
+  - exists() : 최초한 하나의 레코드가 존재하는지 여부를 말해준다
+
+- get() vs filter() -> 데이터가 없는 경우 에러 여부
+
+  ```python
+  #articles/views.py
+  from django.contrib.auth.decorators import login_required
+  ...
+  
+  @login_required
+  def like(request, article_pk):
+      #게시글 가져오기
+      article = get_object_or_404(Article, pk=article_pk)
+      #현재 접속하고 있는 유저
+      user = request.user
+  
+      #현재 게시글을 좋아요 누른 사람 목록에 현재 접속한 유저가 있을 경우 -> 좋아요 취소
+      if article.like_users.filter(pk=user.pk).exists():
+          article.like_users.remove(user)
+      else:#목록에 없을 경우 좋아요 저장
+          article.like_users.add(user)
+      
+      return redirect('articles:index')
+  
+  ```
+  ```python
+  #articles/urls.py
+  urlpatterns = [
+      ...    path('<int:article_pk>/like/',views.like,name='like'),
+  ]
+  ```
+
+##### Fontawesome 아이콘적용
+
+- https://fontawesome.com/ 가입 후
+
+- Kits 받기
+- config/base.html 추가
+
+```html
+<head>
+...
+<!-- FontAwesome -->
+<script src="https://kit.fontawesome.com/a84f15c24e.js" crossorigin="anonymous"></script>
+</head>
+```
+
+##### Template 분리
+
+- 모듈화한 템플릿은 제목 앞에 언더스코어(_) 붙여주는 것이 코딩 컨벤션
+
+- Bootstrap Card 컴포넌트를 사욯해서 꾸미기
+  - config/articles/_article.html 추가
+
+  ```django
+  
+    <div class="col-12 col-md-6 mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">{{article.title}}</h5>
+          <p class="card-text">
+          <a href="{% url 'articles:like' article.pk %}">
+          <!--사용자가 좋아요 누른 상태 - 꽉찬하트-->
+          {% if request.user in article.like_users.all %}
+            <i class="fas fa-heart"></i>
+          {% else %}
+          <!--좋아요 안 누른상태 - 빈하트-->
+            <i class="far fa-heart"></i>
+          {% endif %}
+          
+          </a>     
+          {{article.like_users.all|length}}명이 이 글을 좋아합니다.<br>
+          {{article.created_at}}
+          </p>
+          <a href="{% url 'articles:detail' article.pk %}" class="btn btn-primary">상세보기</a>
+        </div>
+      </div>
+    </div>
+  
+  ```
+
+  - config/articles/index.html 수정
+
+  ```django
+  {% extends 'base.html' %}
+  
+  {% block body %}
+    <br>
+    <h1>Articles</h1>
+    <hr>
+  
+    <a href="{% url 'articles:create' %}">[NEW]</a>
+    <hr>
+    {% for article in articles %}
+    <!-- 모듈화 시켜둔 article 템플릿 가져오기 -->
+    {% include 'articles/_article.html' %}
+    {% endfor %}
+  {% endblock body %}
+  ```
+
+  
