--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -400,7 +400,7 @@ Out[]: <QuerySet [<Patient: 2번 환자 세환>]>
 <head>
 ...
 <!-- FontAwesome -->
-<script src="https://kit.fontawesome.com/a84f15c24e.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/<발급받은Kits코드>.js" crossorigin="anonymous"></script>
 </head>
 ```
 
