--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -457,4 +457,38 @@ Out[]: <QuerySet [<Patient: 2번 환자 세환>]>
   {% endblock body %}
   ```
 
+#### Profile 페이지
+
+> 각 유저마다 프로필 페이지를 만들자
+
+##### View & URL
+
+- User에 대한 CRUD로직 대부분을 accounts앱에서 구현 했으므로, Profile 페이지 역시 accounts앱에 구현해보자
+
+  - accounts/views.py :함수추가
+
+  ```python
+  from django.shortcuts import render, redirect, get_object_or_404
+  from django.contrib.auth import get_user_model
+  ...
+  
+  #프로필
+  def profile(request, username):
+      person = get_object_or_404(get_user_model(),username=username)
+      context = {'person',person}
+      return render(request, 'accounts/profile.html',context)
+      
+  ```
+  - urls.py
+  ```python
+  from django.urls import path
+  from . import views
+  
+  app_name = 'accounts'
+  urlpatterns = [
+      ...
+      path('<str:username>/',views.profile, name='profile'),
+  ]
+  ```
+
   
