팔로워 기능 추가

--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -475,7 +475,7 @@ Out[]: <QuerySet [<Patient: 2번 환자 세환>]>
   #프로필
   def profile(request, username):
       person = get_object_or_404(get_user_model(),username=username)
-      context = {'person',person}
+      context = {'person': person}
       return render(request, 'accounts/profile.html',context)
       
   ```
@@ -491,4 +491,114 @@ Out[]: <QuerySet [<Patient: 2번 환자 세환>]>
   ]
   ```
 
+  - profile.html
   
+  ```html
+  {% extends 'base.html' %}
+  
+  {% block body %}
+  <h1>{{person.username}}님의 Profile</h1>
+  <hr>
+  <h3>{{person.username}}님이 작성한 게시글</h3>
+  <div class="row">
+  {% for article in person.article_set.all %}
+    <div class="col-12 col-md-6 mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">{{article.title}}</h5>
+          <p class="card-text">        
+          {{article.like_users.all|length}}명이 이 글을 좋아합니다.<br>
+          {{article.created_at}}
+          </p>
+          <a href="{% url 'articles:detail' article.pk %}" class="btn btn-primary">상세보기</a>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+  </div>
+  <br>
+  <h3>{{person.username}}님이 작성한 댓글</h3>
+  <div class="row">
+  {% for comment in person.comment_set.all %}
+  <div class="col-12 col-md-6 mb-3">
+    <div class="card">
+      <div class="card-body">
+        {{comment.content}}<b>
+        <small>{{comment.created_at|date:"SHORT_DATETIME_FORMAT"}}</small>
+        <a href="{% url 'articles:detail' comment.article.pk %}" class="btn-primary">게시글 확인</a>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+  </div>
+  {% endblock body %}
+  ```
+
+#### Follow
+
+- Follow는 User와 User의 M:N 관계다
+- 장고가 제공하고 있는 User 모델을 대체해서 사용한다. User 모델을 만드는게 아니라 , 장고가 자신만의 User모델을 만들 수 잇도록 제공해준다
+  - AbstractUser
+
+##### User 모델 대체하기
+
+- accounts/models.py : class 생성
+
+```python
+from django.db import models
+from django.contrib.auth.models import AbstractUser
+from django.conf import settings
+
+# Create your models here.
+class User(AbstractUser):
+    followers = models.ManyToManyField(settings.AUTH_USER_MODEL, related_name='followings')
+```
+- config/settings.py :항목추가
+```python
+#기본값: auth.User
+AUTH_USER_MODEL = 'accounts.User'
+```
+
+- migrations폴더내에 0001...파일삭제, db.sqlite3 삭제
+- makemigrations, migrate 실행
+
+```bash
+#05_django/04_django_form (master)
+$ python manage.py makemigrations
+$ python manage.py migrate
+$ python manage.py createsuperuser
+```
+- accounts/admin.py 수정
+```python
+from django.contrib import admin
+from django.contrib.auth.admin import UserAdmin
+from .models import User
+
+# Register your models here.
+admin.site.register(User, UserAdmin)
+
+```
+
+- articles/views.py : follow() 함수추가
+
+```python
+@login_required
+def follow(request, article_pk, user_pk):
+    #게시글 작성한 유저
+    person = get_object_or_404(get_user_model(), pk=user_pk)
+    #지금 접속하고 있는 유저
+    user = request.user
+
+    #게시글 작성 유저 팔로워 목록에 접속 중인 유저가 있을 경우
+    # -> unfollow
+    if user in person.followers.all:
+        person.followers.remove(user)
+    #명단에 없으면 -> follow
+    else:
+        person.followers.add(user)
+
+    return redirect('articles:detail',article_pk)
+```
+
+
+
