article상세화면 수정

--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -579,6 +579,8 @@ admin.site.register(User, UserAdmin)
 
 ```
 
+##### Detail화면에 follow 기능추가
+
 - articles/views.py : follow() 함수추가
 
 ```python
@@ -589,15 +591,52 @@ def follow(request, article_pk, user_pk):
     #지금 접속하고 있는 유저
     user = request.user
 
-    #게시글 작성 유저 팔로워 목록에 접속 중인 유저가 있을 경우
-    # -> unfollow
-    if user in person.followers.all:
-        person.followers.remove(user)
-    else:
-        #명단에 없으면 -> follow
-        person.followers.add(user)
+    if person != user:
+        if user in person.followers.all:# -> unfollow
+            person.followers.remove(user)    
+        else: # -> follow
+            person.followers.add(user)
 
     return redirect('articles:detail',article_pk)
+
+def detail(request, article_pk):
+    # article = Article.objects.get(pk=article_pk)
+    article = get_object_or_404(Article, pk=article_pk)
+
+    person = get_object_or_404(get_user_model(),pk=article.user_id)
+    comment_form = CommentForm()
+    comments = article.comment_set.all()
+
+    context = {
+        'article':article,
+        'person':person,
+        'comment_form':comment_form,
+        'comments':comments
+        } 
+    return render(request, 'articles/detail.html', context)
+
+```
+
+- articles/_follow.html 화면 추가
+
+```python
+<div class="jumbotron">
+  <h1 class="display-4">{{person.username}}</h1>
+  <p class="lead">
+    팔로워:{{person.followers.all|length}}명 | 팔로잉:{{person.followings.all|length}}명
+  </p>
+  <hr class="my-4">
+  <p></p>
+  {% if user != article.user %}
+    <a class="btn btn-primary btn-lg" href="{% url 'articles:follow' article.pk person.pk %}" role="button">
+    {% if user in person.followers.all %}
+      Unfollow
+    {% else %}
+      follow
+    {% endif %}
+    </a>
+  {% endif %}
+</div>
 ```
 
 
