상단메뉴 Template 분리, 팔로우 모든글 조회

--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -534,6 +534,88 @@ Out[]: <QuerySet [<Patient: 2번 환자 세환>]>
   {% endblock body %}
   ```
 
+#### 상단메뉴 Template 분리
+
+- config/templates/_nav.html 추가
+
+```html
+{% load gravatar %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="{% url 'articles:index' %}"><img class="rounded-circle" src="https://s.gravatar.com/avatar/{{ user.email|makemd5 }}?s=50" alt="">&nbsp;Hello, {{user.username}}</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      {% if user.is_authenticated %} 
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'articles:list' %}">좋은글보기</a>
+        </li>   
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'articles:explore' %}">전부보기</a>
+        </li>  
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:profile' user.username %}">마이페이지</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:update'%}">정보수정</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:change_password'%}">암호변경</a>
+        </li>        
+        <li class="nav-item ">
+          <a class="nav-link" href="{% url 'accounts:logout' %}">로그아웃</a>
+        </li>
+        <form action="{% url 'accounts:delete' %}" method="POST" style="display: inline;">
+          {% csrf_token %}
+          <input type="submit" value="회원탈퇴" class="btn btn-danger">
+        </form>
+      {% else %}
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'accounts:login' %}">로그인</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:signup' %}">회원가입</a>
+        </li>
+      {% endif %}
+
+     
+    </ul>
+  </div>
+</nav>
+```
+
+- config/templates/base.html 수정
+
+```html
+{% load bootstrap4 %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>04_django_form</title>
+{% bootstrap_css %}
+<!-- FontAwesome -->
+<script src="https://kit.fontawesome.com/a84f15c24e.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  {% include '_nav.html' %}
+  <div class="container">
+   
+    {% block body %}
+    {% endblock body %}
+  </div>
+
+{% bootstrap_javascript jquery='full' %}
+</body>
+</html>
+```
+
+
+
 #### Follow
 
 - Follow는 User와 User의 M:N 관계다
@@ -637,6 +719,89 @@ def detail(request, article_pk):
     </a>
   {% endif %}
 </div>
+```
+
+##### 팔로우 하는 모든 글 조회
+
+- articles/views.py : 함수추가
+
+```python
+#내가 팔로우 하는 사람의 글 + 내가 작성한 글
+def list(request):
+    #내가 팔로우하고 있는 사람들
+    followings = request.user.followings.all()
+    #내가 팔로우하고 있는 사람들 + 나 -> 합치기
+    followings = chain(followings, [request.user])
+    #위 명단 사람들 게시글 가져오기 
+    articles = Article.objects.filter(user__in=followings).order_by('-pk').all()
+    comment_form = CommentForm()
+    context = {
+        'articles':articles,
+        'comment_form':comment_form,
+    }
+    return render(request, 'articles/article_list.html' , context)
+
+def explore(request):
+    articles = Article.objects.all()
+    comment_form = CommentForm()
+    context = {
+        'articles':articles,
+        'comment_form':comment_form,
+    }
+    return render(request, 'articles/article_list.html' , context)
+```
+
+- articles/urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'articles'
+urlpatterns = [
+    ...
+    path('list/',views.list,name="list"),
+    path('explore/',views.explore,name='explore'),
+]
+```
+
+- config/articles/article_list.html
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+<!--URL Resolver를 사용해서 제목값 분기-->
+{% if request.resolver_match.url_name == 'list' %}
+<h1>List</h1>
+{% else %}
+<h1>Explore</h1>
+{% endif %}
+{% for article in articles %}
+  <p>글 제목: {{article.title}}</p>
+  <p>글 내용: {{article.content}}</p>
+  <hr>
+  <form action="{% url 'articles:comments_create' article.pk %}" method="POST">
+  {% csrf_token %}
+  {% bootstrap_form comment_form %}
+  {% buttons submit='댓글작성' %}{% endbuttons %}
+  </form>
+  <hr>
+{% endfor %}
+{% endblock body %}
+```
+
+- _nav.html 수정 :메뉴 추가
+
+```html
+....
+<li class="nav-item">
+    <a class="nav-link" href="{% url 'articles:list' %}">좋은글보기</a>
+</li>   
+<li class="nav-item">
+    <a class="nav-link" href="{% url 'articles:explore' %}">전부보기</a>
+</li>  
 ```
 
 
