article hashTag 기능추가

--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -804,5 +804,159 @@ urlpatterns = [
 </li>  
 ```
 
+## HashTag
+
+- models.py : class 추가
+
+```python
+class Hashtag(models.Model):
+  content = models.TextField(unique=True)
+  # 객체 표현 방식
+  def __str__(self):
+    return self.content 
+
+class Article(models.Model):
+    ...    
+    hashtags = models.ManyToManyField(Hashtag, blank=True)
+
+```
+
+```bash
+$ python manage.py makemigrations
+$ python manage.py migrate
+```
+
+- config/templates/hashtag.html 추가
+
+```html
+{% extends 'base.html' %}
+
+{% block body %}
+<h1>{{ hashtag.content }} 게시글 모아보기</h1>
+<h4>{{ articles|length }} 개의 글이 있습니다.</h4>
+<hr>
+{% for article in articles %}
+  <p>글 제목:{{ article.title }}</p>
+  <p>글 내용: {{ article.content }}</p>
+  <p>{{ article.comment_set.all|length }}개의 댓글이 있습니다.</p>
+  <p>{{ article.like_users.all|length }}명이 이글을 좋아합니다.</p>
+  <a href="{% url 'articles:detail' article.pk %}">게시글 바로가기</a>
+{% endfor %}
+{% endblock %}
+```
+
+- views.py : hashtag() 함수추가, create() 수정, update() 수정
+
+```python
+def hashtag(request, hash_pk):
+  # 해시태그 가져오기
+  hashtag = get_object_or_404(Hashtag, pk=hash_pk)
+  # 해당 해시태그를 참조하는 게시글들 가져오기
+  articles = hashtag.article_set.order_by('-pk')
+  context = {
+    'hashtag' : hashtag,
+    'articles' : articles,
+  }
+  return render(request, 'articles/hashtag.html', context)
+
+def create(request):    
+    if request.method == 'POST':
+        # Binding 과정
+        # 폼 인스턴스를 생성하고, 전달받은 데이터를 채운다.
+        # 인스턴스에 데이터를 채워서, 유효성 검증을 진행한다. (그래서 변수에 담음)
+        form = ArticleForm(request.POST)
+        # embed()
+        if form.is_valid():
+            article = form.save(commit=False)
+            article.user = request.user
+            article.save()
+
+            # hashtag
+            # 게시글 내용을 split해서 리스트로 만듦
+            for word in article.content.split():
+                # word가 '#'으로 시작할 경우 해시태그 등록
+                if word.startswith('#'):
+                    hashtag, created = Hashtag.objects.get_or_create(content=word)
+                    article.hashtags.add(hashtag)
+
+
+        return redirect('articles:detail', article.pk)
+    else:
+        form = ArticleForm()
+  
+def update(request, article_pk):
+    article = get_object_or_404(Article,pk=article_pk)
+    if request.user == article.user: #작성자가 같은경우만
+        if request.method == "POST":
+            form = ArticleForm(request.POST, instance=article)
+            if form.is_valid():
+                article = form.save()
+                # hashtag
+                article.hashtags.clear()
+                for word in article.content.split():
+                    if word.startswith('#'):
+                        hashtag, create = Hashtag.objects.get_or_create(content=word)
+                        article.hashtags.add(hashtag)
+
+                return redirect('articles:detail', article.pk)
+        else:
+            form = ArticleForm(instance=article)       
+    else:
+        return redirect('articles/index') 
+```
+
+- config/templates/articles/detail.html 수정
+  - 글내용:{{ article.content }}=> {{article|hashtag_link|safe }} 변경
+
+```html
+{% extends 'base.html' %}
+{% load make_link %}
+{% load bootstrap4 %}
+{% block body %}
+{% include 'articles/_follow.html' %}
+  <br>
+  <h1>DETAIL</h1>
+  <hr>
+<p>글 번호 : {{ article.pk }}</p>
+<p>글 제목 : {{ article.title }}</p>
+{% comment %} <p>글 내용 : {{ article.content }}</p> {% endcomment %}
+<p>글 내용:{{article|hashtag_link|safe }}</p>
+<p>생성 시각 : {{ article.created_at }}</p>
+<p>수정 시각 : {{ article.updated_at }}</p>
+<hr>
+<a href="{% url 'articles:index' %}">[BACK]</a>
+{% if request.user == article.user %}
+<a href="{% url 'articles:update' article.pk %}">[UPDATE]<a>
+<form action="{% url 'articles:delete' article.pk %}" method="POST">
+{% csrf_token %}<button type="submit" >[DELETE]</button>
+</form>
+{% endif %}
+<hr>
+<br>
+{% if user.is_authenticated %}
+<form action="{% url 'articles:comments_create' article.pk %}" method="POST">
+  <!-- POST 요청할 때 반드시 설정 -->
+  {% csrf_token %}
+  {% bootstrap_form comment_form layout='inline' %}
+  <div class="text-center">
+    {% buttons submit='댓글작성' %}{% endbuttons %}
+  </div>
+</form>
+{% else%}
+<a href="{% url 'accounts:login' %}">[댓글을 작성하려면 로그인 해주세요]</a>
+{% endif %}
+<hr>
+<p><b>댓글목록({{comments|length}}개)</b></p>
+{% for comment in comments %}
+<p>[{{forloop.revcounter}}번 댓글] {{comment.content}} <small>({{comment.created_at}})</small>
+{% if comment.user == request.user %}
+<form action="{% url 'articles:comments_delete' article.pk comment.pk %}" method="POST">
+{% csrf_token %}<button type="submit" >댓글삭제</button></form>
+{% endif %}
+</p>
+{% endfor %}
+{% endblock %}
+```
+
 
 
