--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -804,7 +804,7 @@ urlpatterns = [
 </li>  
 ```
 
-## HashTag
+#### HashTag 기능 추가
 
 - models.py : class 추가
 
@@ -903,6 +903,27 @@ def update(request, article_pk):
             form = ArticleForm(instance=article)       
     else:
         return redirect('articles/index') 
+```
+
+- 어플리케이션내에 templatetags/make_link.py 파일 추가
+  - 04_django_form/articles/templatetags/make_link.py
+
+```python
+from django import template
+
+register = template.Library()
+
+@register.filter
+def hashtag_link(article):
+  content = article.content + ' '
+  hashtags = article.hashtags.all()
+
+  for hashtag in hashtags:
+    content = content.replace(
+      hashtag.content + ' ',
+      f'<a href="/articles/{hashtag.pk}/hashtag/">{hashtag.content}</a> '
+    )
+  return content
 ```
 
 - config/templates/articles/detail.html 수정
