--- a/13.hphk_django_model_relationship.md
+++ b/13.hphk_django_model_relationship.md
@@ -804,7 +804,11 @@ urlpatterns = [
 </li>  
 ```
 
-#### HashTag 기능 추가
+---
+
+2019.11.14
+
+## HashTag 기능 
 
 - models.py : class 추가
 
@@ -979,5 +983,98 @@ def hashtag_link(article):
 {% endblock %}
 ```
 
+## Social Login
 
+> 인증, 계정, 등록 등을 다루는 여러가지 방법이 존재하는데, 
+>
+> `django-allauth` 라이브러리는 사용해서 Social Login을 구현해보자
+>
+> 대부분의 소셜 로그인을 지원하고 회원가입 시킬 수 있다
+
+#### 사전준비
+
+-  https://django-allauth.readthedocs.io/en/latest/installation.html  참고
+
+```bash
+#해당 가상환경 체크
+#05_django/04_django_form (master)
+$ pip install django-allauth
+```
+
+- settings.py 수정
+
+```python
+AUTHENTICATION_BACKENDS = (   
+    # Needed to login by username in Django admin, regardless of `allauth`
+    'django.contrib.auth.backends.ModelBackend',
+)
+INSTALLED_APPS = [
+    ...
+    'django.contrib.sites',
+    'allauth',
+    'allauth.account',
+    'allauth.socialaccount',
+    'allauth.socialaccount.providers.kakao',
+    ...
+]
+SITE_ID = 1
+```
+
+- config/urls.py
+
+```python
+from django.contrib import admin
+from django.urls import path, include
+
+urlpatterns = [
+    path('accounts/',include('accounts.urls')),
+    path('accounts/',include('allauth.urls')),
+    path('articles/', include('articles.urls')),
+    path('admin/', admin.site.urls),
+]
+```
+
+```bash
+$ python manage.py migrate
+```
+
+-  http://127.0.0.1:8000/admin/ 접속하면 소셜로그인 관련 테이블이 생성된 것을 확인 할수 있다
+
+![image-20191114140020177](md_img/image-20191114140020177.png)
+
+- 카카오 개발자 사이트 (https://developers.kakao.com/) 로그인
+
+  - 앱  생성
+  - 설정 > 일반 > 웹 플랫폼 추가 > 사이트 도메인 : http://127.0.0.1:8000, https://127.0.0.1:8000 입력 후 추가
+  - 사용자 관리 : ON 
+    - 프로필정보, 카카오 계정 : ON
+    - 로그인 Redirect URI :http://127.0.0.1:8000/accounts/kakao/login/callback/ 추가
+
+  - 설정 >고급 : Client Secret 코드 생성
+
+- Django 관리 사이트
+  - 소셜 어플리케이션 추가
+    - 제공자: Kakao 선택
+    - 이름:...
+    - 클라이언트 아이디: (발급받은 REST API키)
+    - 비밀키: (발급받은 Client Secret 키)
+    - Site 선택
+
+![image-20191114144755099](md_img/image-20191114144755099.png)
+
+- config/accounts/login.html 수정
+
+```html
+{% load socialaccount %}
+...
+<a class="btn btn-warning" href="{% provider_login_url 'kakao' %}">카카오 로그인</a>
+
+```
+
+- settings.py 추가
+
+```python
+#로그인 후 리다이렉트 경로
+LOGIN_REDIRECT_URL ='articles:index'
+```
 
